<resources>
    <string name="app_name">AndroidApp</string>
    <string name="login">Log in</string>
    <string name="authorization">Authorization</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter">Enter</string>
    <string name="register_offer">Don\'t have an account? Register!</string>

    <string name="err_empty_field">The field must\'t be empty</string>
    <string name="err_incorrect_email_format">Incorrect email format</string>
    <string name="err_passwords_must_match">Passwords must match</string>
    <string name="err_small_password">Password must contain at least 8 characters</string>

    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="patronymic">Patronymic</string>
    <string name="save">Save</string>
    <string name="birth_date">Birth date</string>
    <string name="telephone_number">Telephone number</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="sex">Sex</string>
    <string name="basic_data">Basic data</string>
    <string name="manufacturer_code">Manufacturer code</string>
    <string name="test">afskdjfh askjdfakj shdkjfa shkdjfhak sjhdkfjahskdj fhakjsdhf kja</string>
    <string name="phone_brand">Phone brand</string>
    <string name="name">Name</string>
    <string name="phone_model">Phone model</string>
    <string name="ean">EAN</string>
    <string name="weight">Weight</string>
    <string name="depth">Depth</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="material">Material</string>
    <string name="color">Color</string>
    <string name="physical_parameters">Physical parameters</string>
    <string name="display">Display</string>
    <string name="screen_diagonal">Screen diagonal</string>
    <string name="display_type">Display type</string>
    <string name="touch_screen">Touch screen</string>
    <string name="pixel_density">Pixel density</string>
    <string name="screen_resolution">Screen resolution</string>
    <string name="Apparatus">Apparatus</string>
    <string name="rear_camera_resolution">Rear camera resolution</string>
    <string name="front_camera_resolution">Front camera resolution</string>
    <string name="camera_features">Camera features</string>
    <string name="resolution_of_recorded_videos">Resolution of recorded\nvideos</string>
    <string name="favorites">Favorites</string>
    <string name="processor">Processor</string>
    <string name="processor_frequency">Processor frequency</string>
    <string name="number_of_processor_cores">Number of processor\ncores</string>
    <string name="connectors">Connectors</string>
    <string name="batteryCapacity">Battery capacity</string>
    <string name="operatingSystem">Operating system</string>
    <string name="ramMemory">RAM memory</string>
    <string name="builtInMemory">Built-in memory</string>
    <string name="detailed_information">Detailed information</string>
    <string name="create">Create</string>
    <string name="adminEmail">admin@gmail.com</string>
    <string name="choose_images">Choose images</string>
    <string name="urlToImage">URL to images</string>
    <string name="memory">Memory</string>
    <string name="camera">Camera</string>
    <string name="find_smartphone">Find smartphone</string>
    <string name="save_comment">Save comment</string>
    <string name="comment">Comment</string>
    <string name="unknown">Unknown</string>
    <string name="raiting">Raiting</string>
    <string name="rating">Rating</string>
    <string name="deleteAccount">Delete account</string>
    <string name="search">Search</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="processor_cores">Processor cores</string>
</resources>